# mvp

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test-file.txt
.github/: copilot-instruction.md
alembic/: env.py
alembic/versions/: 5cbd6eb609d5_create_users.py
app/: __init__.py
app/config/: constants.py  database.py  middlewares.py  settings.py
app/controllers/: __init__.py  auth_controller.py  health_controller.py  upload_controller.py  user_controller.py
app/jobs/: scheduled_jobs.py  scheduler.py
app/middlewares/: context_middleware.py  logging_middleware.py
app/models/: __init__.py  base_model.py  user.py
app/repositories/: base_repository.py  user_repository.py
app/schemas/: base_schema.py  upload_schema.py  user_schema.py
app/services/: base_service.py  s3_service.py  upload_service.py  user_service.py
app/utils/: auth.py  logger.py  request_context.py  tracing.py
app/workers/: celery_app.py  tasks.py
docs/: api_testing_guide.md  controllers_guide.md  index.md  models_guide.md  repositories_guide.md  services_guide.md  testing_best_practices.md
scripts/: check_table_models.py  init_db.py  manage_migrations.py  run_tests.py  setup_upload.sh  start_worker.py  test_s3_bucket.sh
tests/: README.md  conftest.py
tests/api/: test_auth.py  test_health.py  test_upload.py  test_users.py
tests/utils/: helpers.py  models.py
